Added sound for incorrect answers

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
             <img id="landing-image" src="images/Strong-Link2.gif" alt="It's treasure hunt time">
             <h1>Happy Birthday Lincoln!</h1>
             <button id="start-button">Start Quiz</button>
-            <audio id="background-music" loop>
-                <source src="sound/Lincoln.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
+    <button id="play-music-button">Play Music</button>
+    <audio id="background-music">
+        <source src="sound/Lincoln.mp3" type="audio/mpeg">
+    </audio>
+
+    <audio id="incorrect-sound">
+        <source src="sound/nope.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </div>
 
         <div id="quiz-container" style="display: none;">
