--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </audio>
 
     <audio id="incorrect-sound">
-        <source src="sound/nope.mp3" type="audio/mpeg">
+        <source src="sound/Nope.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
