--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="landing-page">
             <img id="landing-image" src="images/Strong-Link2.gif" alt="It's treasure hunt time">
             <h1>Happy Birthday Lincoln!</h1>
-            <button id="start-button">Start Quiz</button>
+            <button id="start-button">Start treasure hunt</button>
     <button id="play-music-button">Play Music</button>
 
         </div>
