--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <div id="loading-screen">
+        <p>Loading...</p>
+    </div>
+
     <audio id="background-music">
         <source src="sound/Lincoln.mp3" type="audio/mpeg">
     </audio>
