--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="loading-screen">
+    <div id="loading-screen" style="display: flex;">
         <p>Loading...</p>
     </div>
 
